tests/sksl/errors/MeshFragmentWithBlender.stage
### Compilation failed:

error: 6: effects are not permitted in custom mesh shaders
uniform blender myBlender;
^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
